--- a/fuse/src/app/main/settings/curriculums/curriculum/subjects/templates/subject-card.html
+++ b/fuse/src/app/main/settings/curriculums/curriculum/subjects/templates/subject-card.html
@@ -1,6 +1,6 @@
 <div class="template-1">
     <div class="media">
-        <a class="primary md-button md-ink-ripple" ui-sref="app.settings.curriculums.curriculum.subjects.subject.level-setting({ subjectId: card.id })">
+        <a ui-sref="app.settings.curriculums.curriculum.subjects.subject.level-setting({ subjectId: card.id })">
             <img class="image" ng-src="assets/images/subjects/{{card.s_name_en}}.jpeg" alt="{{card.media.image.alt}}">
         </a>
     </div>
