--- a/fuse/src/app/toolbar/layouts/content-with-toolbar/toolbar.html
+++ b/fuse/src/app/toolbar/layouts/content-with-toolbar/toolbar.html
@@ -2,7 +2,7 @@
 
     <div layout="row" layout-align="start center">
         <div class="logo" layout="row" layout-align="start center">
-          <img src="assets/images/logos/ehla_logo.png" />
+          <img src="assets/images/logos/ehla_logo.svg" />
         </div>
 
         <div class="toolbar-separator"></div>
