--- a/fuse/src/app/main/login/login.html
+++ b/fuse/src/app/main/login/login.html
@@ -1,7 +1,7 @@
 <div id="login" class="flex-scrollable" layout="column" ms-scroll>
     <div id="login-form-wrapper" layout="column" layout-align="center center">
         <div id="login-form" class="md-whiteframe-8dp">
-            <img src="assets/images/logos/ehla_logo.png" />
+            <img src="assets/images/logos/ehla_logo.svg" />
 
             <div class="title" translate="LOGIN.TITLE">Log in to your account</div>
 
