--- a/fuse/src/app/toolbar/layouts/horizontal-navigation/toolbar.html
+++ b/fuse/src/app/toolbar/layouts/horizontal-navigation/toolbar.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="logo" layout="row" layout-align="start center">
-          <img src="assets/images/logos/ehla_logo.png" />
+          <img src="assets/images/logos/ehla_logo.svg" />
         </div>
     </div>
 
