--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/exercises/exercise/templates/topics-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/exercises/exercise/templates/topics-selection.html
@@ -104,7 +104,7 @@
                 </md-checkbox>
                 <a class="btn btn-xs" ng-if="node.child && node.child.length > 0"
                    data-nodrag
-                   ng-click="expanded[node.id] = !expanded[node.id];">
+                   ng-click="toggleExpand(node)">
                                       <span class="icon s20" ng-class="{
                                           'icon-plus': !expanded[node.id],
                                           'icon-minus': expanded[node.id]
