--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/videos.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/videos.html
@@ -38,7 +38,7 @@
   <div class="content videos-content">
     <md-tabs md-dynamic-height>
 
-      <md-tab label="To Assign" md-on-select="vm.switchSection('unassigned')">
+      <md-tab label="To Assign" md-on-select="vm.switchSection('unassigned')" md-active="chosenVideoSection === 'unassigned'">
         <div class="widget-group layout-wrap ng-scope layout-row flex-100" layout="row" flex="100" layout-wrap="">
           <div class="content-card" layout="column" flex>
 
@@ -93,7 +93,7 @@
         </div>
       </md-tab>
 
-      <md-tab label="Assigned" md-on-select="vm.switchSection('assigned')">
+      <md-tab label="Assigned" md-on-select="vm.switchSection('assigned')" md-active="chosenVideoSection === 'assigned'">
         <div class="widget-group layout-wrap ng-scope layout-row flex-100" layout="row" flex="100" layout-wrap="">
           <div class="content-card" layout="column" flex>
 
