--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/video-weakness/video-progress/video.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/video-weakness/video-progress/video.html
@@ -43,7 +43,7 @@
           </th>
           <th class="secondary-text">
             <div class="table-header">
-              <span class="column-title">Progress</span>
+              <span class="column-title">Progress (Minutes)</span>
             </div>
           </th>
           <th class="secondary-text">
@@ -56,12 +56,12 @@
         <tbody>
         <tr ng-repeat="student in ::vm.students">
           <td>{{ student.name }}</td>
-          <td>{{ '2017-2-28 11:12:11' }}</td>
+          <td>{{ student.lastViewingTime | date: 'yyyy-MM-dd hh:mm:ss' }}</td>
           <td>
             <div style="position: relative; width: 100%; height: 100%;" ng-init="vm.randomVideoProgress(student)">
               <span>&nbsp;</span>
               <div style="position: absolute; color: white; top: 0; z-index: 200; left: 5px;">
-                {{student.totalCompleted}}/{{student.totalStudents}} ({{student.progressPercentage}}%)
+                {{student.totalCompleted}}/{{student.total}} ({{student.progressPercentage}}%)
               </div>
               <md-progress-linear class="ehla-progress" md-mode="determinate" value="{{student.progressPercentage}}" style="top: -3px">
               </md-progress-linear>
