--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/consolidated-report-weakness/student-report/student-report.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/consolidated-report-weakness/student-report/student-report.html
@@ -10,7 +10,7 @@
       <div layout="row" layout-align="start center">
         <div layout="column" layout-align="start start">
           <div class="h2">
-            Weakness Report - {{breadcrumbs.weakness.name}}
+            Weakness Report - {{breadcrumbs.weakness.name_en}}
           </div>
         </div>
       </div>
@@ -36,17 +36,17 @@
           </th>
             <th class="secondary-text">
                 <div class="table-header">
-                    <span class="column-title">Latest Result</span>
+                    <span class="column-title">Latest Results</span>
                 </div>
             </th>
           <th class="secondary-text">
             <div class="table-header">
-              <span class="column-title">Error History</span>
+              <span class="column-title">Grade</span>
             </div>
           </th>
           <th class="secondary-text">
             <div class="table-header">
-              <span class="column-title">Correct History</span>
+              <span class="column-title">Results History</span>
             </div>
           </th>
         </tr>
@@ -61,74 +61,18 @@
         <tr ng-repeat="student in vm.students" ng-show="!loading">
           <td>{{ student.name }}</td>
           <td>
-            <i flex class="icon s20 icon-check" ng-if="$first"></i>
-            <i flex class="icon s20 icon-close" ng-if="!$first"></i>
-            <md-menu md-position-mode="target-right target" >
-              <md-button aria-label="Open demo menu" class="md-icon-button" ng-click="$mdOpenMenu($event)">
-                <md-icon md-font-icon="icon-magnify"
-                         class="icon s18 md-default-theme md-font material-icons icon-magnify"
-                         aria-hidden="true"></md-icon>
-              </md-button>
-              <md-menu-content width="5">
-                <div ng-repeat="item in vm.history">
-                  <md-menu-item >
-                    <div layout="row" flex="50">
-                      <div flex>{{item.date}}</div>
-                    </div>
-                    <div layout="row" flex="50">
-                      <div flex>{{item.name}}</div>
-                    </div>
-                  </md-menu-item>
-                  <md-divider class="ng-scope md-default-theme" ng-if="!$last && vm.history.length > 1"></md-divider>
-                </div>
-              </md-menu-content>
-            </md-menu>
+            <span>
+              <i flex class="icon s20" ng-class="[result.correct ? 'icon-check color-green-icon' : 'icon-close color-red-icon']" ng-repeat="result in student.results | limitTo : 5"></i>
+            </span>
+
           </td>
           <td>
-            <span flex>5</span>
-            <md-menu md-position-mode="target-right target" >
-              <md-button aria-label="Open demo menu" class="md-icon-button" ng-click="$mdOpenMenu($event)">
-                <md-icon md-font-icon="icon-magnify"
-                         class="icon s18 md-default-theme md-font material-icons icon-magnify"
-                         aria-hidden="true"></md-icon>
-              </md-button>
-              <md-menu-content width="5">
-                <div ng-repeat="item in vm.history">
-                  <md-menu-item >
-                    <div layout="row" flex="50">
-                      <div flex>{{item.date}}</div>
-                    </div>
-                    <div layout="row" flex="50">
-                      <div flex>{{item.name}}</div>
-                    </div>
-                  </md-menu-item>
-                  <md-divider class="ng-scope md-default-theme" ng-if="!$last && vm.history.length > 1"></md-divider>
-                </div>
-              </md-menu-content>
-            </md-menu>
+            <i flex class="icon s25" title="{{vm.getGradeTitle(student)}}" ng-class="vm.getGradeIconClass(student)"></i>
           </td>
           <td>
-            <span flex>3</span>
-            <md-menu md-position-mode="target-right target" >
-              <md-button aria-label="Open demo menu" class="md-icon-button" ng-click="$mdOpenMenu($event)">
-                <md-icon md-font-icon="icon-magnify"
-                         class="icon s18 md-default-theme md-font material-icons icon-magnify"
-                         aria-hidden="true"></md-icon>
-              </md-button>
-              <md-menu-content width="5">
-                <div ng-repeat="item in vm.history">
-                  <md-menu-item >
-                    <div layout="row" flex="50">
-                      <div flex>{{item.date}}</div>
-                    </div>
-                    <div layout="row" flex="50">
-                      <div flex>{{item.name}}</div>
-                    </div>
-                  </md-menu-item>
-                  <md-divider class="ng-scope md-default-theme" ng-if="!$last && vm.history.length > 1"></md-divider>
-                </div>
-              </md-menu-content>
-            </md-menu>
+            <md-icon md-font-icon="icon-magnify" ng-click="vm.showResultsHistory($event, student.results)"
+                     class="icon s20 icon-magnify"
+                     aria-hidden="true"></md-icon>
           </td>
         </tr>
         </tbody>
