reading and writing UI

--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assign-video.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assign-video.html
@@ -98,7 +98,7 @@
         <md-dialog-actions>
             <div layout="row" layout-align="end center" style="width: 100%">
                 <div>
-                    <md-button type="submit" ng-click="vm.save()"
+                    <md-button type="submit" ng-click="vm.save()" ng-show="vm.isEditable"
                                class="send-button md-accent md-raised"
                                aria-label="SAVE">
                         Save
