--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assigned-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assigned-selection.html
@@ -21,7 +21,10 @@
       <li style="width: 10%">
         Deadline
       </li>
-      <li style="width: 20%; text-align: center">
+      <li style="width: 10%; text-align: center" ng-style="{'width': isShowExerciseColumn ? '10%' : '20%'}">
+        Video
+      </li>
+      <li style="width: 10%; text-align: center" ng-show="isShowExerciseColumn">
         Video
       </li>
       <li style="width: 15%">
@@ -99,13 +102,24 @@
       </md-input-container>
       -->
     </li>
-    <li style="width: 20%; text-align: center">
+    <li style="width: 10%; text-align: center"  ng-style="{'width': isShowExerciseColumn ? '10%' : '20%'}">
       <div  ng-if="node.child.length === 0" >
                 <span ng-click="vm.selectVideo($event, node, true)" style="cursor: pointer">
                     <md-icon md-font-icon="icon-video"
                              class="icon s18 md-default-theme md-font material-icons"
                              aria-hidden="true"></md-icon>
                 <span>{{vm.displayAssigned(node)}}</span>
+                </span>
+
+      </div>
+    </li>
+    <li style="width: 10%; text-align: center" ng-show="isShowExerciseColumn">
+      <div  ng-if="node.child.length === 0" >
+                <span ng-click="vm.selectExercise($event, node, true)" style="cursor: pointer">
+                    <md-icon md-font-icon="icon-table-edit"
+                             class="icon s18 md-default-theme md-font material-icons"
+                             aria-hidden="true"></md-icon>
+                <span>{{vm.displayAssignedExercise(node)}}</span>
                 </span>
 
       </div>
