--- a/fuse/src/app/main/settings/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
+++ b/fuse/src/app/main/settings/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
@@ -46,7 +46,7 @@
                                    style="margin: 5px 10px 5px 0"
                                    multiple>
                             <md-optgroup label="Levels">
-                                <md-option ng-value="level.id" ng-repeat="level in vm.levels">{{level.name}}</md-option>
+                                <md-option ng-value="level.id" ng-repeat="level in vm.levels">{{level.name_en}}</md-option>
                             </md-optgroup>
                         </md-select>
                     </li>
