--- a/fuse/src/app/main/settings/curriculums/curriculum/subjects/subject/level-setting/templates/topics-selection.html
+++ b/fuse/src/app/main/settings/curriculums/curriculum/subjects/subject/level-setting/templates/topics-selection.html
@@ -60,7 +60,7 @@
                        ng-if="!node.child.length"
                        multiple>
                 <md-optgroup label="Levels">
-                    <md-option ng-value="level.id" ng-repeat="level in vm.levels">{{level.name}}</md-option>
+                    <md-option ng-value="level.id" ng-repeat="level in vm.levels">{{level.name_en}}</md-option>
                 </md-optgroup>
             </md-select>
         </li>
