user list and user details

--- a/fuse/src/app/index.scss
+++ b/fuse/src/app/index.scss
@@ -11,6 +11,18 @@
  */
 // injector
 // endinjector
+.custom-datatable-filter {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+
+  md-select {
+    margin-right: 0;
+    background-color: white;
+    padding: 3px 10px;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+  }
+}
+
 ms-navigation {
   font-size: 130% !important;;
 }
