--- a/fuse/src/app/main/settings/settings.html
+++ b/fuse/src/app/main/settings/settings.html
@@ -79,7 +79,7 @@
                                 <td style="text-align: center">Loading...</td>
                                 <td></td>
                             </tr>
-                            <tr ng-repeat="year in vm.academicData"
+                            <tr ng-repeat="year in vm.academicData" ng-click="vm.editYear($event, year)"
                                 ng-show="!loading" > <!-- ng-class="{ 'year-selected': year.current_sem }"-->
                                 <td>{{ year.display_name }}</td>
                                 <td>{{ year.semester }}</td>
@@ -87,11 +87,7 @@
                                     <i flex class="icon s20 icon-check" ng-if="year.current_sem === 1"></i>
                                     <!-- <i flex class="icon s20 icon-close" ng-if="year.current_sem !== 1"></i> -->
                                 </td>
-                                <td class="year-icons">
-                                    <md-icon md-font-icon="blue-600-fg icon-border-color"
-                                             ng-click="vm.editYear($event, year)"
-                                             class="s18"></md-icon>
-
+                                <td class="year-icons" ng-click="$event.preventDefault(); $event.stopPropagation();">
                                     <md-icon md-font-icon="blue-600-fg icon-library-books"
                                              ng-click="vm.viewWeakness($event, year)"
                                              class="s18"></md-icon>
