extra-learning ui - unfinished

--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/videos.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/videos.html
@@ -10,7 +10,7 @@
       <div layout="row" layout-align="start center">
         <div layout="column" layout-align="start start">
           <div class="h2">
-            {{pageTitle}}
+            Videos
           </div>
         </div>
       </div>
