--- a/fuse/src/app/main/users/user/user.html
+++ b/fuse/src/app/main/users/user/user.html
@@ -45,6 +45,43 @@
           </div>
         </div>
 
+
+        <div layout="row">
+          <div layout="column" flex="20">
+            <md-input-container>
+              <label>Email</label>
+            </md-input-container>
+          </div>
+          <div layout="column" flex="80">
+            <md-input-container>
+              <input ng-model="user.email" required="true">
+            </md-input-container>
+          </div>
+        </div>
+
+        <div layout="row">
+          <div layout="column" flex="20">
+            <md-input-container>
+              <label>Current Password</label>
+            </md-input-container>
+          </div>
+          <div layout="column" flex="80">
+            <md-input-container>
+              <input ng-model="user.password" required="true">
+            </md-input-container>
+          </div>
+          <div layout="column" flex="20">
+            <md-input-container>
+              <label>New Password</label>
+            </md-input-container>
+          </div>
+          <div layout="column" flex="80">
+            <md-input-container>
+              <input ng-model="user.newPassword" required="true">
+            </md-input-container>
+          </div>
+        </div>
+
         <div layout="row">
           <div layout="column" flex="20">
             <md-input-container>
