extra-learning ui - reading and writing

--- a/fuse/src/app/main/calendar/calendar.html
+++ b/fuse/src/app/main/calendar/calendar.html
@@ -131,7 +131,7 @@
         </div>
     </md-toolbar>
 
-    <md-dialog-content ms-scroll>
+    <md-dialog-content>
 
         <div class="event-details" layout="column">
 
