--- a/fuse/src/app/main/calendar/dialogs/event-form/event-form-dialog.html
+++ b/fuse/src/app/main/calendar/dialogs/event-form/event-form-dialog.html
@@ -10,7 +10,7 @@
             </div>
         </md-toolbar>
 
-        <md-dialog-content ms-scroll>
+        <md-dialog-content>
             <md-input-container class="md-block">
                 <label translate="CALENDAR.TITLE">Name</label>
                 <input name="name" ng-model="vm.calendarEvent.name" required md-autofocus  ng-disabled="vm.calendarEvent.isOther">
