--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/templates/error-history-chart.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/templates/error-history-chart.html
@@ -9,7 +9,7 @@
             </div>
         </md-toolbar>
 
-        <md-dialog-content ms-scroll>
+        <md-dialog-content>
             <nvd3 options="vm.options" data="vm.data"></nvd3>
         </md-dialog-content>
     </form>
