--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assign-exercise.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assign-exercise.html
@@ -9,7 +9,7 @@
       </div>
     </md-toolbar>
 
-    <md-dialog-content ms-scroll>
+    <md-dialog-content>
 
       <div>
         <ul class="ehla-table-list ehla-table-list-header">
