--- a/fuse/src/app/main/settings/subject-setting/templates/subject-edit.dialog.html
+++ b/fuse/src/app/main/settings/subject-setting/templates/subject-edit.dialog.html
@@ -10,7 +10,7 @@
       </div>
     </md-toolbar>
 
-    <md-dialog-content ms-scroll>
+    <md-dialog-content>
       <div layout="column" style="padding-bottom: 20px">
         <md-input-container class="md-block" style="margin-top: 20px">
           <label>Name in English</label>
