--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/extra-learning.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/extra-learning.html
@@ -27,22 +27,22 @@
   <div class="content videos-content">
     <md-tabs md-dynamic-height>
 
-      <md-tab label="To Assign" md-on-select="vm.switchSection('unassigned')" md-active="chosenVideoSection === 'unassigned'">
+      <md-tab label="To Assign" md-on-select="vm.switchSection('unassigned')" md-active="section['chosen' + pageTitle] === 'unassigned'">
         <div class="widget-group layout-wrap ng-scope layout-row flex-100" layout="row" flex="100" layout-wrap="">
           <div class="content-card" layout="column" flex>
             <div class="content" layout="row" flex
-                 ng-include="'app/main/homework/subjects/assignment/classes/class/videos/templates/unassigned-selection.html'"></div>
+                 ng-include="'app/main/homework/subjects/assignment/classes/class/extra-learning/templates/unassigned-selection.html'"></div>
 
           </div>
         </div>
       </md-tab>
 
-      <md-tab label="Assigned" md-on-select="vm.switchSection('assigned')" md-active="chosenVideoSection === 'assigned'">
+      <md-tab label="Assigned" md-on-select="vm.switchSection('assigned')" md-active="section['chosen' + pageTitle] === 'assigned'">
         <div class="widget-group layout-wrap ng-scope layout-row flex-100" layout="row" flex="100" layout-wrap="">
           <div class="content-card" layout="column" flex>
             <!-- / CONTENT TOOLBAR -->
             <div class="content" layout="row" flex
-                 ng-include="'app/main/homework/subjects/assignment/classes/class/videos/templates/assigned-selection.html'"></div>
+                 ng-include="'app/main/homework/subjects/assignment/classes/class/extra-learning/templates/assigned-selection.html'"></div>
 
           </div>
         </div>
