--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/templates/unassigned-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/templates/unassigned-selection.html
@@ -1,18 +1,43 @@
-<div class="md-background-bg md-whiteframe-1dp ehla-table-list-wrapper ehla-table-list-undragable" style="width:100%">
-  <div ng-show="!vm.unassigned.data.length && loading" class="ehla-table-empty">Loading</div>
-  <div ng-show="!vm.unassigned.data.length && !loading" class="ehla-table-empty">No Data</div>
-  <table class="extra-learning-table">
-    <tr ng-repeat="unassigned in vm.unassigned.data">
+<!-- <div class="md-title mb-32">Zero Configuration</div> -->
+<div class="white-bg md-whiteframe-4dp">
+  <table class="dataTable row-border hover extra-learning-table" datatable="ng" dt-options="vm.dtOptions">
+    <thead style="display: none">
+    <tr>
+      <th class="secondary-text">
+        <div class="table-header">
+          <span class="column-title">image</span>
+        </div>
+      </th>
+      <th class="secondary-text">
+        <div class="table-header">
+          <span class="column-title">detail</span>
+        </div>
+      </th>
+      <th class="secondary-text">
+        <div class="table-header">
+          <span class="column-title">actions</span>
+        </div>
+      </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-if="loading">
+      <td></td>
+      <td style="text-align: center">Loading...</td>
+      <td></td>
+    </tr>
+    <tr ng-repeat="item in vm.data.list" ng-show="!loading">
+      <td><div><img ng-src="{{ item.thumbnail_path }}" title="{{ item.name_en }}" alt="{{ item.name_en }}"/></div></td>
       <td>
-
+        <div class="title">{{ item.name_en }}</div>
+        <div class="desc">{{ item.level_desc_en }}{{item.difficulty_en ? ' | ' + item.difficulty_en : '' }}{{vm.displayThemes(item)}}</div>
       </td>
       <td>
-
-      </td>
-      <td>
-
+        <a ng-if="item.btn_show_open === '1'" class="access-btn">Settings</a>
+        <!-- <a ng-if="item.btn_show_open !== '1'" class="locked-btn">Locked</a> -->
+        <a ng-if="item.btn_show_preview === '1'" ng-click="vm.previewItem($event, item)" class="preview-btn">Preview</a>
       </td>
     </tr>
+    </tbody>
   </table>
-</div>
 </div>
