--- a/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
+++ b/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
@@ -9,7 +9,7 @@
             </div>
         </md-toolbar>
 
-        <md-dialog-content ms-scroll>
+        <md-dialog-content>
 
             <!--
             <div ng-repeat="video in vm.node.videoList" layout="row" class="layout-row">
