--- a/fuse/src/app/main/settings/academic-year/dialogs/setting-form/setting-form-dialog.html
+++ b/fuse/src/app/main/settings/academic-year/dialogs/setting-form/setting-form-dialog.html
@@ -10,7 +10,7 @@
             </div>
         </md-toolbar>
 
-        <md-dialog-content ms-scroll>
+        <md-dialog-content>
             <div layout="column" style="padding-bottom: 20px">
                 <div class="title">Academic Year Range</div>
                 <div>
