reading, writing - setting details UI

--- a/fuse/src/app/index.scss
+++ b/fuse/src/app/index.scss
@@ -144,6 +144,7 @@ ul.ehla-table-list-header {
   padding: 0 5px;
   font-weight: 600;
   line-height:40px;
+  background-color: #eee;
 }
 
 ul.ehla-table-list li {
