--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/templates/preview-item.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/templates/preview-item.html
@@ -2,7 +2,7 @@
     <form name="taskForm" class="md-inline-form" novalidate>
         <md-toolbar class="md-accent md-hue-2">
             <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
-                <span class="title">{{vm.node.name_en || vm.node.name_zh}} -> Select Video</span>
+                <span class="title">{{vm.node.name_en || vm.node.name_zh}} -> Preview</span>
                 <md-button class="md-icon-button" ng-click="vm.closeDialog()">
                     <md-icon md-font-icon="icon-close" aria-label="Close dialog"></md-icon>
                 </md-button>
