extra-learning ui - reading and writing

--- a/fuse/src/app/index.scss
+++ b/fuse/src/app/index.scss
@@ -155,6 +155,7 @@ ul.ehla-table-list li {
   vertical-align: middle;
   overflow:hidden;
   font-weight:300;
+  cursor: default;
 }
 
 ul.ehla-table-list li.amount-padding{
